Update Workep response covid-19
Update Workep response covid-19 ES

--- a/es/respuesta-al-covid.html
+++ b/es/respuesta-al-covid.html
@@ -114,21 +114,17 @@
       <p>Este es el momento de fortalecernos juntos así, que queremos dar un alivio a los equipos de trabajo que están pasando por problemas.</p>
       <div class="joinworkep_btns">
         <ul>
-          <li><a href="#url" class="signupgoogle"><span>QUIERO APLICAR</span></a></li>
+          <li><a href="#url" class="starttrial_btn"><span>QUIERO APLICAR</span></a></li>
         </ul>
       </div>
 
     </div>
     <div class="startsec">
-        <div class="startsec_in">
-          <h3>Empezar</h3>
+        <div class="startsec_in" style="box-shadow: none; background:none;">
+        <p>En Workep nos sentimos afortunados de tener tan increíbles clientes, socios y una comunidad encantadora. Para todos ustedes, que nos respaldan, también estamos aquí para ayudarlos. Nuestros esfuerzos se centran en la salud y la seguridad de nuestros empleados, ya que sirven a nuestros clientes sin problemas durante este tiempo volátil. El equipo de Workep está dedicado a ayudar aliviar las presiones financieras actuales que enfrentan nuestros clientes y contribuir a la comunidad en general.</p>
           <span class="robochar">
-            <!--<img src="../images/gen2.png" alt="" class="oscillation">
-            <svg viewBox="0 0 100 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
-            <ellipse id="shadow" cx="50" cy="5" rx="30" ry="6" style="fill:#b2b2b2;"/>
-            </svg>-->
-            <p>Este es el momento de fortalecernos juntos así, que queremos dar un alivio a los equipos de trabajo que están pasando por problemas</p>
-          </span>
+            <img src="../images/gen2.png" alt="" class="oscillation">
+            
         </div>
         <div class="start_im1"><img src="../images/prod_ic1.png" alt="Google Drive"></div>
         <div class="start_im2"><img src="../images/prod_ic2.png" alt="Google Spreadsheets"></div>
@@ -136,7 +132,7 @@
         <div class="start_im4"><img src="../images/prod_ic4.png" alt="Gantt Chart"></div>
         <div class="start_im5"><img src="../images/prod_ic5.png" alt="Canvan"></div>
         <div class="start_im6"><img src="../images/prod_ic6.png" alt="Canvan list"></div>
-    </div>
+    </div>-->
   </div>
 
 
