--- a/es/respuesta-al-covid.html
+++ b/es/respuesta-al-covid.html
@@ -42,7 +42,7 @@
     <meta name="twitter:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite" />
     <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg" />
 
-    <title>Workep: las bases de la gestión de proyectos con características que permiten la colaboración entre miembros del equipo de trabajo, y entre empresas.</title>
+    <title>La respuesta de Workep al Covid-19 estamos para apoyarte en este momento de crisis</title>
 
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
@@ -111,7 +111,7 @@
       <div class="section_title">
          <h2>Workep COVID-19 <br>(+300 Planes premium gratuitos)</h2>
       </div>
-      <p>Este es el momento de fortalecernos juntos así, que queremos dar un alivio a los equipos de trabajo que están pasando por problemas.</p>
+      <p>Este es el momento de fortalecernos juntos así que queremos dar un alivio a los equipos de trabajo que están pasando por problemas.</p>
       <div class="joinworkep_btns">
         <ul>
           <li><a href="#url" class="starttrial_btn"><span>QUIERO APLICAR</span></a></li>
