--- a/es/respuesta-al-covid.html
+++ b/es/respuesta-al-covid.html
@@ -25,7 +25,7 @@
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="La experiencia de gestión de proyectos más rápida para la colaboración entre empresas. Integración con G Suite, diagramas de Gantt, registro de tiempo, presupuesto y más.">
+    <meta name="description" content="La experiencia de gestión de proyectos más rápida para la colaboración entre empresas. Integración con G Suite, diagramas de Gantt, registro de tiempo y más.">
     <meta name="keywords" content="Google Apps, G Suite, proyectos, administración, tareas, colaboración, integración, automatización, registro de tiempo, diagramas de Gantt, presupuesto, rastreador, archivos, Google Drive, Calendario,">
     <link rel="author" href="https://workep.com" />
     <!-- FB Meta tags -->
@@ -114,7 +114,7 @@
       <p>Este es el momento de fortalecernos juntos así que queremos dar un alivio a los equipos de trabajo que están pasando por problemas.</p>
       <div class="joinworkep_btns">
         <ul>
-          <li><a href="#url" class="starttrial_btn"><span>QUIERO APLICAR</span></a></li>
+          <li><a href=".hbspt-form" class="starttrial_btn"><span>QUIERO APLICAR</span></a></li>
         </ul>
       </div>
 
