--- a/es/respuesta-al-covid.html
+++ b/es/respuesta-al-covid.html
@@ -122,6 +122,8 @@
     <div class="startsec">
         <div class="startsec_in" style="box-shadow: none; background:none;">
         <p>En Workep nos sentimos afortunados de tener tan increíbles clientes, socios y una comunidad encantadora. Para todos ustedes, que nos respaldan, también estamos aquí para ayudarlos. Nuestros esfuerzos se centran en la salud y la seguridad de nuestros empleados, ya que sirven a nuestros clientes sin problemas durante este tiempo volátil. El equipo de Workep está dedicado a ayudar aliviar las presiones financieras actuales que enfrentan nuestros clientes y contribuir a la comunidad en general.</p>
+        <br>
+        <p>Estamos felices de anunciar el primer paquete Workep COVID-19 incluye 300 planes premium gratuitos por hasta un año para pequeñas empresas nuevas y existentes con menos de 10 empleados, grandes descuentos para 200 empresas medianas y grandes, además de cursos de capacitación / seminarios web dedicados sobre cómo crear estrategias de trabajo remoto efectivas para toda la comunidad. Vamos a dar lo mejor de nosotros, somos #WorkEverywherePositive.</p>
           <span class="robochar">
             <img src="../images/gen2.png" alt="" class="oscillation">
             
@@ -1179,7 +1181,7 @@ hitos específicos.</P>
 <script src="../js/slick.js"></script>
 <script src="../js/jwgSlider.min.js"></script>
 <script src="../js/jQuery.inputSliderRange.min.js"></script>
-<script src="../js/wow.js"></script>
+<!--<script src="../js/wow.js"></script>-->
 <script src="../js/easy-responsive-tabs.js"></script>
 <script src="../js/TweenMax.min.js"></script>
 <script src="../js/common.js"></script>
