--- a/covid-response.html
+++ b/covid-response.html
@@ -25,7 +25,7 @@
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="La experiencia de gestión de proyectos más rápida para la colaboración entre empresas. Integración con G Suite, diagramas de Gantt, registro de tiempo y más.">
+    <meta name="description" content="The fastest project management experience for collaboration between companies. Integration with G Suite, Gantt charts, time recording and more.">
     <meta name="keywords" content="Google Apps, G Suite, proyectos, administración, tareas, colaboración, integración, automatización, registro de tiempo, diagramas de Gantt, presupuesto, rastreador, archivos, Google Drive, Calendario,">
     <link rel="author" href="https://workep.com" />
     <!-- FB Meta tags -->
@@ -42,7 +42,7 @@
     <meta name="twitter:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite" />
     <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg" />
 
-    <title>La respuesta de Workep al Covid-19 estamos para apoyarte en este momento de crisis</title>
+    <title>Workep's response to Covid-19 is here to support you in this time of crisis</title>
 
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
