--- a/covid-response.html
+++ b/covid-response.html
@@ -1077,17 +1077,16 @@ their success, and adapt to issues to avoid major failures.</p>
       </div>
     </div>
   </div>
-
-  <footer class="main_footer">
+<footer class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Workep logo"></a>
+            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
             <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
-            <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
+            <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love"></i> by Workep</span>
           </div>
           <div class="foot2">
             <h4>Product</h4>
@@ -1102,6 +1101,15 @@ their success, and adapt to issues to avoid major failures.</p>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
+              <h4>Features</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/time-tracker.html">Time traker</a></li>
+                <li><a href="https://workep.com/budget-tracker.html">Budget Traker</a></li>
+                <li><a href="https://workep.com/external-collaboration.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/voice-notes.html">Voice notes</a></li>
+                <li><a href="https://workep.com/gmail-add-on.html">Gmail Ad-on</a></li>
+            </ul>
           </div>
           <div class="foot3">
             <h4>Workep</h4>
@@ -1111,6 +1119,18 @@ their success, and adapt to issues to avoid major failures.</p>
               <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
+            <h4>Competitors</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/competitors-airtable.html">Airtable</a></li>
+                <li><a href="https://workep.com/competitors-asana.html">Asana</a></li>
+                <li><a href="https://workep.com/competitors-basecamp.html">Basecamp</a></li>
+                <li><a href="https://workep.com/competitors-jira.html">Jira</a></li>
+                <li><a href="https://workep.com/competitors-monday.html">Monday</a></li>
+                <li><a href="https://workep.com/competitors-notion.html">Notion</a></li>
+                <li><a href="https://workep.com/competitors-smartsheet.html">Smartsheet</a></li>
+                <li><a href="https://workep.com/competitors-trello.html">Trello</a></li>
+                <li><a href="https://workep.com/competitors-wrike.html">Wrike</a></li>
+            </ul>  
           </div>
           <div class="foot4">
             <h4>Resources</h4>
@@ -1126,14 +1146,23 @@ their success, and adapt to issues to avoid major failures.</p>
               <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
               <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
             </ul>
+              <h4>Industry</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/startups.html">Startup</a></li>
+                <li><a href="https://workep.com/law-firms.html">Law Firms</a></li>
+                <li><a href="https://workep.com/software-dev.html">Developer Dev</a></li>
+                <li><a href="https://workep.com/consulting.html">Consulting</a></li>
+                <li><a href="https://workep.com/marketing.html">Marketing</a></li>
+            </ul>
           </div>
           <div class="foot5">
             <h4>Contact</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="Twitter workep"></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail Workep"></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="hastag"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
+       
         </div>
       </div>
     </div>
@@ -1143,8 +1172,8 @@ their success, and adapt to issues to avoid major failures.</p>
           <div class="footlanguage">
            <div class="footlanguage_select">
               <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/product.html" selected>English</option>
-                <option value="https://workep.com/es/producto.html">Español</option>
+                <option value="https://workep.com/" selected>English</option>
+                <option value="https://workep.com/es/es.html">Español</option>
               </select>
            </div>
           </div>
@@ -1168,7 +1197,6 @@ their success, and adapt to issues to avoid major failures.</p>
       </div>
     </div>
   </footer>
-
   	<!-- Jquery-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
