--- a/covid-response.html
+++ b/covid-response.html
@@ -10,9 +10,8 @@
 
     <!-- Google indicator for language  -->
     <link rel=“alternate” hreflang=“en” href=“https://workep.com/” />
-    <link rel=“alternate” hreflang=“es” href=“https://workep.com/es/es.html” />
-    <link rel=“canonical” href=“https://workep.com/es/es.html” />
-
+    <link rel=“alternate” hreflang=“es” href=“https://workep.com/es/es.html”/>
+    <link rel=“canonical” href=“https://workep.com/covid-response.html”/>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
