--- a/es/respuesta-al-covid.html
+++ b/es/respuesta-al-covid.html
@@ -11,7 +11,7 @@
     <!-- Google indicator for language  -->
     <link rel=“alternate” hreflang=“en” href=“https://workep.com/” />
     <link rel=“alternate” hreflang=“es” href=“https://workep.com/es/es.html” />
-    <link rel=“canonical” href=“https://workep.com/es/es.html” />
+    <link rel=“canonical” href=“https://workep.com/es/respuesta-al-covid.html” />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
