--- a/covid-response.html
+++ b/covid-response.html
@@ -76,7 +76,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
-             <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
+             <li><a href="https://workep.com/made-for-google.html">GOOGLE PROJECT MANAGEMENT</a></li>
              <li><a href="https://workep.com/covid-response.html">COVID-19</a></li> 
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
@@ -1096,9 +1096,9 @@ their success, and adapt to issues to avoid major failures.</p>
               <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-              <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+              <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+              <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
             </ul>
               <h4>Features</h4>
             <ul class="links_all">
