--- a/es/respuesta-al-covid.html
+++ b/es/respuesta-al-covid.html
@@ -77,7 +77,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
-             <li><a href="https://workep.com/es/hechoparagoogle.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
+             <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
              <!-- <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li> -->
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
              <li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>
@@ -1102,9 +1102,9 @@ hitos específicos.</P>
               <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
-              <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
+              <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
               <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
-              <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
+              <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
             </ul>
           </div>
           <div class="foot3">
